# behave-django-autodoc

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml
behave_django_autodoc/: __init__.py  browser_driver_adapter.py  decorators.py  elements.py  feature_transformer.py  html_builder.py  output_formats.py
behave_django_autodoc/assets/: doc.css  feature.html  final_html.html  initial_html.html  scenario.html  step_horizontal.html  step_vertical.html
tests/: test_behave_django_autodoc.py  test_browser_driver_adapter.py  test_decorators.py  test_elements.py  test_feature_to_dict.py  test_html_builder.py  test_output_formats.py
