[tool.poetry]
name = "behave-django-autodoc"
version = "0.1.0"
description = ""
authors = ["Whanderley Souza Freitas <whanderley.souza@iff.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.5.0"
splinter = "^0.18.1"
pylint = "^2.15.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
