[tool.poetry]
name = "behave-django-autodoc"
version = "0.1.0"
description = ""
authors = ["Whanderley Souza Freitas <whanderley.souza@iff.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.5.0"
splinter = "^0.18.1"
pylint = "^2.15.5"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.10.0"
PyYAML = "^6.0"
mypy = "^0.982"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
