[tool.poetry]
name = "behave-django-autodoc"
version = "0.1.0"
description = ""
authors = ["Whanderley Souza Freitas <whanderley.souza@iff.edu.br>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
mypy = "^0.982"
flake8 = "^5.0.4"
pylint = "^2.15.5"
pre-commit = "^2.20.0"
black = "^22.10.0"
pytest = "^5.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
